{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 20,
  "lineage": "a597bbc1-1142-d32f-2769-8af38d13ff0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "php_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00305d2fa3c93abfc",
            "arn": "arn:aws:ec2:ap-south-1:430861662740:instance/i-0619571dd17a359fa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0619571dd17a359fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ce98a1f7f351a6ac",
            "private_dns": "ip-10-15-1-73.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.15.1.73",
            "public_dns": "ec2-13-232-176-245.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.176.245",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de6bba1614982e6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe5f6fb639095942",
            "tags": {
              "Name": "php-test-ec2"
            },
            "tags_all": {
              "Name": "php-test-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ed7a68f7413fef7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.php_sg",
            "aws_subnet.php_public_subnet",
            "aws_vpc.php_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "php_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430861662740:internet-gateway/igw-0f19c81d21ccd48a8",
            "id": "igw-0f19c81d21ccd48a8",
            "owner_id": "430861662740",
            "region": "ap-south-1",
            "tags": {
              "Name": "php-test-vpc-igw"
            },
            "tags_all": {
              "Name": "php-test-vpc-igw"
            },
            "vpc_id": "vpc-0e1a54b1298de98c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.php_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "php_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430861662740:route-table/rtb-06cd981571f8655df",
            "id": "rtb-06cd981571f8655df",
            "owner_id": "430861662740",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f19c81d21ccd48a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "php-test-vpc-public-rt"
            },
            "tags_all": {
              "Name": "php-test-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1a54b1298de98c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.php_igw",
            "aws_vpc.php_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "php_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc5402c64cefd426",
            "region": "ap-south-1",
            "route_table_id": "rtb-06cd981571f8655df",
            "subnet_id": "subnet-0fe5f6fb639095942"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.php_igw",
            "aws_route_table.php_public_rt",
            "aws_subnet.php_public_subnet",
            "aws_vpc.php_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "php_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430861662740:security-group/sg-04ed7a68f7413fef7",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ed7a68f7413fef7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "php-test-ec2-sg",
            "name_prefix": "",
            "owner_id": "430861662740",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "php-test-ec2-sg"
            },
            "tags_all": {
              "Name": "php-test-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1a54b1298de98c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.php_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "php_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430861662740:subnet/subnet-0fe5f6fb639095942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.15.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe5f6fb639095942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430861662740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "php-test-subnet"
            },
            "tags_all": {
              "Name": "php-test-subnet"
            },
            "vpc_id": "vpc-0e1a54b1298de98c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.php_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "php_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430861662740:vpc/vpc-0e1a54b1298de98c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/16",
            "default_network_acl_id": "acl-06ec99dfaa24c54df",
            "default_route_table_id": "rtb-0390624b718e48cca",
            "default_security_group_id": "sg-0d41670d5fcd3934d",
            "dhcp_options_id": "dopt-0eff2ae8f7c432512",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1a54b1298de98c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0390624b718e48cca",
            "owner_id": "430861662740",
            "region": "ap-south-1",
            "tags": {
              "Name": "php-test-vpc"
            },
            "tags_all": {
              "Name": "php-test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}